# hdda-f24

./: README.md  pyproject.toml  setup_precommit.sh  solution.ipynb  solution_no_val.ipynb
data/: sol_all_mean.csv
data/Data/csv/: ratings_test_eval.csv
report/: main.tex
report/presentation/: presentation.tex
report/report/: main.tex  references.bib
solutions/: gd10_submission.csv  gd30_submission.csv  gd50_submission.csv  gd80_submission.csv  gd_gdsubmission.csv  gd_sqrt_submission.csv  gdsubmission.csv  rms_submission.csv  submission.csv
