[project]
name = "hdda-f24"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.9.2",
    "pandas>=2.2.3",
    "scikit-learn>=1.5.2",
    "torch>=2.5.1",
    "tqdm>=4.67.1",
]

[tool.ruff]
extend-include = ["*.ipynb"]
fix=true
line-length = 90

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

exclude = [
    ".git",
    ".ruff_cache",
    ".venv",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu118", marker = "platform_system != 'Darwin'"},
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true
